src/objects/Registration_Question_MERC__c.object
<CustomObject>
    <fields>
        <fullName>Answer_Type_MERC__c</fullName>
        <description>Used to define the type of response expected from the end user or HCP : MERC : Created on 14/04/2015 by Oliver Dunford, Mavens Consulting</description>
        <inlineHelpText>Defines the answer format for the question.  For example &apos;Select Many&apos; would ensure the user had to select more than one response.</inlineHelpText>
        <label>Answer Type</label>
        <picklist>
            <picklistValues>
                <fullName>Text</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Select One</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Select Many</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Consulting_MERC__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used to indicate this question is applicable for this record type of Meeting Participant : MERC : Created on 10/08/2015 by Oliver Dunford, Mavens Consulting</description>
        <inlineHelpText>Make question applicable for those Meeting Participants who are Consulting</inlineHelpText>
        <label>Consulting</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Delegate_Employee_MERC__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used to indicate this question is applicable for this record type of Meeting Participant : MERC : Created on 01/03/2016 by Edith Sereno, Mavens Consulting</description>
        <inlineHelpText>Make question applicable for those Meeting Participants who are Delegates of type Employee</inlineHelpText>
        <label>Delegate: Employee</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Delegate_Non_HCP_MERC__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used to indicate this question is applicable for this record type of Meeting Participant : MERC : Created on 01/03/2016 by Edith Sereno, Mavens Consulting</description>
        <inlineHelpText>Make question applicable for those Meeting Participants who are Delegates of type Non-HCP</inlineHelpText>
        <label>Delegate: Non-HCP</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Individual_Sponsorship_MERC__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used to indicate this question is applicable for this record type of Meeting Participant : MERC : Created on 10/08/2015 by Oliver Dunford, Mavens Consulting</description>
        <inlineHelpText>Make question applicable for those Meeting Participants who are Individual Sponsorships</inlineHelpText>
        <label>Individual Sponsorship</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Meeting_MERC__c</fullName>
        <description>Relationship to the Mercury Meeting.  Visibility to questions driven from meeting level access : MERC : Created on 13/04/2015 by Oliver Dunford, Mavens Consulting</description>
        <label>Meeting</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Meeting_MERC__c.RecordType.Name</field>
                <operation>notEqual</operation>
                <value>Ad_Hoc_Consulting, Meeting_Program</value>
            </filterItems>
            <infoMessage>Please select &quot;All Fields&quot; and try your search again.</infoMessage>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Meeting_MERC__c</referenceTo>
        <relationshipLabel>Registration Questions</relationshipLabel>
        <relationshipName>Registration_Questions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Mercury_External_Id_MERC__c</fullName>
        <description>Set via workflow for integration with external systems : MERC : Created on 27/04/2015 by Oliver Dunford, Mavens Consulting</description>
        <externalId>true</externalId>
        <label>Mercury External Id</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order_Number_MERC__c</fullName>
        <description>Used to order the questions in a logical order in the related list and on the web service : MERC : Created on 13/04/205 by Oliver Dunford</description>
        <inlineHelpText>Populate to ensure questions can be ordered correctly in Mercury and on the Web Services for the HCP.</inlineHelpText>
        <label>Order Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Question_MERC__c</fullName>
        <description>The question text presented to the HCP when asking a flexible registration question : MERC : Created on 13/04/2015 by Oliver Dunford, Mavens Consulting</description>
        <inlineHelpText>The question that will be shown to the HCP.</inlineHelpText>
        <label>Question</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_Provider_MERC__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used to indicate this question is applicable for this record type of Meeting Participant : MERC : Created on 10/08/2015 by Oliver Dunford, Mavens Consulting</description>
        <inlineHelpText>Make question applicable for those Meeting Participants who are Service Providers</inlineHelpText>
        <label>Service Provider</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>